# HTTPProxy

./: CMakeLists.txt  README.md  READMEru.md  main.cpp
src/: logger.cpp  logger.h  main.cpp
src/client/: client.cpp
src/ffmpeg/: ffmpeg_manager.cpp  ffmpeg_manager.h
src/logger/: logger.cpp  logger.h
src/server/: http_server.cpp  http_server.h  http_session.cpp  http_session.h  udp_connection.cpp  udp_connection.h
